--- a/common/i18n/no.i18n.json
+++ b/common/i18n/no.i18n.json
@@ -1,11 +1,23 @@
 {
 	"new_word": "Nytt ord",
 	"new_url": "Ny lenke",
+
 	"searchbar": "Søk etter et ord",
 	"lang_searchbar": "Velg et språk",
+
 	"tab_video": "Video",
 	"tab_text": "Tekst",
 	"tab_image": "Bilde",
+
 	"lang_norwegian": "Norsk",
-	"lang_english": "Engelsk"
+	"lang_english": "Engelsk",
+
+	"label_newWord": "Legg til et nytt ord",
+	"label_newUrl": "Legg til en ny lenke",
+	"form_language": "Språk",
+	"form_urlType": "Linktype",
+	"form_relatedWords": "Relaterte ord",
+	"form_description": "Beskrivelse",
+	"form_url": "Link",
+	"form_word": "Ord"
 }
