Improvements to the insertion methods of new urls and words. Added additional code to distinguish data for different languages

--- a/common/i18n/en.i18n.json
+++ b/common/i18n/en.i18n.json
@@ -14,7 +14,7 @@
 
 	"label_newWord": "Add a new word",
 	"label_newUrl": "Add a new url",
-	"form_language": "language",
+	"form_language": "Language",
 	"form_urlType": "Url type",
 	"form_relatedWords": "Related words",
 	"form_description": "Description",
